--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					</div>
 				</div>
 				<div id="backgroundHalf">
-					<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://slowe.github.io/VirtualSky/embed?longitude=-80.5204&latitude=43.4643&fontsize=15px&gradient=false&projection=polar&negative=true&color=rgb(232,63,96)&keyboard=true&constellations=true&showstarlabels=true&scalestars=1&magnitude=5&cardinalpoints=false&live=true" allowTransparency="true"></iframe>
+					<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://slowe.github.io/VirtualSky/embed?longitude=-80.5204&latitude=43.4643&fontsize=15px&gradient=false&projection=polar&negative=true&color=rgb(232,63,96)&keyboard=true&constellations=true&showstarlabels=true&scalestars=1&magnitude=5&cardinalpoints=false&live=true" allowTransparency="true" sandbox="allow-same-origin"></iframe>
 				</div>
 			</div>
 		</div>
