--- a/index.html
+++ b/index.html
@@ -170,10 +170,12 @@
 					</div>
 				</div>
 				<div id="backgroundHalf">
-					<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://slowe.github.io/VirtualSky/embed?longitude=-80.5204&latitude=43.4643&fontsize=15px&gradient=false&projection=polar&negative=true&color=rgb(232,63,96)&keyboard=true&constellations=true&showstarlabels=true&scalestars=1&magnitude=5&cardinalpoints=false&live=true" allowTransparency="true"></iframe>
+					<div id="starmap"></div>
 				</div>
 			</div>
 		</div>
 	</body>
+	<script src="/VirtualSky/stuquery.min.js"></script>
+	<script src="/VirtualSky/virtualsky.min.js"></script>
+	<script src="/page-script.js"></script> 
 </html>
-<script src="/page-script.js"></script> 
