change to static icon

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>404 - Simran Thind</title>
-		<link rel="icon" href="./assets/site-icons/sparkle-site-icon.gif">
+		<link rel="icon" href="./assets/site-icons/sparkle-site-icon-static.png" type="image/png">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
