add Apple-compatible icons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Simran Thind</title>
-		<link rel="icon" href="./assets/site-icons/sparkle-site-icon-static.png" type="image/png">
+		<link rel="icon" type="image/png" href="./assets/site-icons/sparkle-site-icon-static.png" >
+		<link rel="apple-touch-icon" type="image/png" href="./assets/site-icons/sparkle-site-icon-static.png">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
 					<div id="scrollPad">
 						<h1>Simran Thind</h1>
 						<div id="aboutContent">
-							<p>Software Engineering student specializing in Human-Computer Interaction at the <a href="https://uwaterloo.ca/future-students/programs/software-engineering" target="_blank">University of Waterloo</a>. Currently looking for Summer 2024 internships.
+							<p>Software Engineering student specializing in Human-Computer Interaction at the <a href="https://uwaterloo.ca/future-students/programs/software-engineering" target="_blank">University of Waterloo</a>. Looking for new grad 2025 roles.
 								View my resume <a href="https://drive.google.com/file/d/1agbOpH9veKtwaxW2eltL4BJ4ghqRFwsd/preview" target="_blank">here</a>.
 							</p>
 						</div>
