fix starchart resizing, add Special Fish

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 							<p>Software Engineering student specializing in Human-Computer Interaction at the <a href="https://uwaterloo.ca/future-students/programs/software-engineering" target="_blank">University of Waterloo</a>. Looking for new grad 2025 roles.
 								View my resume <a href="https://drive.google.com/file/d/1agbOpH9veKtwaxW2eltL4BJ4ghqRFwsd/preview" target="_blank">here</a>.
 							</p>
+							<p>The starchart (<a href="https://slowe.github.io/VirtualSky/" target="_blank">VirtualSky</a>: 0.7.7 - powered by <a href="https://lco.global/" target="_blank">Las Cumbres Observatory</a>) on this site may look busy depending on the time of day and the screen size.</p>
 						</div>
 						<div id="linksContent">
 							<p class="bold">✦ Links</p>
@@ -93,6 +94,13 @@
 									<div class="media">
 										<img width="22" height="15" src="./assets/media-icons/logo_webring_b.png" alt="SE Webring"/>
 										<p>SE Webring</p>
+									</div>
+								</a>
+								<!--Special Fish-->
+								<a href="https://special.fish/simran" target="_blank" class="small-link">
+									<div class="media">
+										<img width="20" height="20" src="./assets/media-icons/special-fish.png" alt="Special Fish: @simran"/>
+										<p>Special Fish</p>
 									</div>
 								</a>
 							</div>
