fix W3C validation errors

--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta charset="utf-8" />
-		<meta name="author" content="Simran Thind" />
-		<meta
-			name="description"
-			content="Simran's personal website!"
-		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<noscript>
+			<style>
+				#aboutContent, #projectsContent, #linksContent, #extrasContent {
+					display:none;
+				}
+			</style>
+		</noscript>
+		<meta charset="utf-8">
+		<meta name="author" content="Simran Thind">
+		<meta name="description" content="Simran's personal website!">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Simran Thind</title>
 		<link rel="icon" type="image/png" href="./assets/site-icons/sparkle-site-icon-static.png" >
 		<link rel="apple-touch-icon" type="image/png" href="./assets/site-icons/sparkle-site-icon-static.png">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="page-styles.css" />
+		<link rel="stylesheet" href="page-styles.css">
 	</head>
 	<body onload="startUp()">
 		<div id="mainBox">
@@ -35,70 +39,70 @@
 								<!--GitHub-->
 								<a href="https://github.com/simcard0000" target="_blank" class="small-link">
 									<div class="media">
-										<img width="15" height="15" src="./assets/media-icons/GitHub-Mark-120px-plus.png" alt="GitHub: @simcard0000"/>
+										<img width="15" height="15" src="./assets/media-icons/GitHub-Mark-120px-plus.png" alt="GitHub: @simcard0000">
 										<p>GitHub</p>
 									</div>
 								</a>
 								<!--Devpost-->
 								<a href="https://devpost.com/simcard0000" target="_blank" class="small-link">
 									<div class="media">
-										<img width="17" height="17" src="./assets/media-icons/devpost-128.png" alt="Devpost: @simcard0000"/>
+										<img width="17" height="17" src="./assets/media-icons/devpost-128.png" alt="Devpost: @simcard0000">
 										<p>Devpost</p>
 									</div>
 								</a>
 								<!--Medium-->
 								<a href="https://medium.com/@simran.thind" target="_blank" class="small-link">
 									<div class="media">
-										<img width="20" height="13" src="./assets/media-icons/Medium-Symbol-Black-RGB@4x.png" alt="Medium: @simran.thind"/>
+										<img width="20" height="13" src="./assets/media-icons/Medium-Symbol-Black-RGB@4x.png" alt="Medium: @simran.thind">
 										<p>Medium</p>
 									</div>
 								</a>
 								<!--Product Hunt-->
 								<a href="https://www.producthunt.com/@simcard0000" target="_blank" class="small-link">
 									<div class="media">
-										<img width="15" height="15" src="./assets/media-icons/product-hunt-logo-black-960.png" alt="ProductHunt: @simcard0000"/>
+										<img width="15" height="15" src="./assets/media-icons/product-hunt-logo-black-960.png" alt="ProductHunt: @simcard0000">
 										<p>Product Hunt</p>
 									</div>								
 								</a>
 								<!--Are.na-->
 								<a href="https://www.are.na/simran-thind" target="_blank" class="small-link">
 									<div class="media">
-										<img width="22" height="13" src="./assets/media-icons/arena-logo.webp" alt="Are.na: Simran Thind"/>
+										<img width="22" height="13" src="./assets/media-icons/arena-logo.webp" alt="Are.na: Simran Thind">
 										<p>Are.na</p>
 									</div>
 								</a>
 								<!--LinkedIn-->
 								<a href="https://www.linkedin.com/in/simran-thind0000/" target="_blank" class="small-link">
 									<div class="media">
-										<img width="16" height="16" src="./assets/media-icons/linkedin-icon-black.png" alt="LinkedIn: @simran-thind0000"/>
+										<img width="16" height="16" src="./assets/media-icons/linkedin-icon-black.png" alt="LinkedIn: @simran-thind0000">
 										<p>LinkedIn</p>
 									</div>
 								</a>
 								<!--AngelList-->
 								<a href="https://angel.co/u/simcard0000" target="_blank" class="small-link">
 									<div class="media">
-										<img width="10" height="15" src="./assets/media-icons/AngelList_Black_Victory_Hand.png" alt="AngelList: @simcard0000"/>
+										<img width="10" height="15" src="./assets/media-icons/AngelList_Black_Victory_Hand.png" alt="AngelList: @simcard0000">
 										<p>AngelList</p>
 									</div>
 								</a>
 								<!--read.cv-->
 								<a href="https://read.cv/simcard0000" target="_blank" class="small-link">
 									<div class="media">
-										<img width="15" height="15" src="./assets/media-icons/read_cv.ico" alt="read.cv: @simcard0000"/>
+										<img width="15" height="15" src="./assets/media-icons/read_cv.ico" alt="read.cv: @simcard0000">
 										<p>Read.CV</p>
 									</div>
 								</a>
 								<!--SE Webring-->
 								<a href="https://se-webring.xyz/" target="_blank" class="small-link">
 									<div class="media">
-										<img width="22" height="15" src="./assets/media-icons/logo_webring_b.png" alt="SE Webring"/>
+										<img width="22" height="15" src="./assets/media-icons/logo_webring_b.png" alt="SE Webring">
 										<p>SE Webring</p>
 									</div>
 								</a>
 								<!--Special Fish-->
 								<a href="https://special.fish/simran" target="_blank" class="small-link">
 									<div class="media">
-										<img width="20" height="20" src="./assets/media-icons/special-fish.png" alt="Special Fish: @simran"/>
+										<img width="20" height="20" src="./assets/media-icons/special-fish.png" alt="Special Fish: @simran">
 										<p>Special Fish</p>
 									</div>
 								</a>
@@ -149,7 +153,7 @@
 						<div id="extrasContent">
 							<p class="bold">✦ Extras</p>
 							<div class="extraBox">
-								<img class="extraImage" id="latestSongCover" alt="❔" />
+								<img src="" class="extraImage" id="latestSongCover" alt="❔">
 								<div class="extraInfo">
 									<p id="latestSongTitle">Loading...</p>
 									<p id="latestSongArtist">Loading...</p>
@@ -157,21 +161,16 @@
 								</div>
 							</div>
 							<div class="extraBox">
-								<img class="extraImage" id="latestGameCover" alt="❔" />
+								<img src="" class="extraImage" id="latestGameCover" alt="❔">
 								<div class="extraInfo">
 									<p id="latestGameTitle">Loading...</p>
 									<p id="latestGameWeeks">Loading...</p>
 									<p id="latestGameAll">Loading...</p>
 								</div>
 							</div>
-							<a href="https://gossipsweb.net"><img class="extraImage" src="https://gossipsweb.net/images/twwmwh-gray.jpg" alt="This website was made with hands." style="height: 43px; border: 1px solid #000;" /></a>
+							<a href="https://gossipsweb.net"><img class="extraImage" src="https://gossipsweb.net/images/twwmwh-gray.jpg" alt="This website was made with hands." style="height: 43px; border: 1px solid #000;"></a>
 						</div>
 						<noscript>
-							<style type="text/css">
-								#aboutContent, #projectsContent, #linksContent, #extrasContent {
-									display:none;
-								}
-							</style>
 							<div id="noscriptContent">
 								<p>This site would look and work a lot better with JavaScript being able to run. Please enable running all scripts for this website in your browser.</p>
 							</div>
@@ -183,8 +182,8 @@
 				</div>
 			</div>
 		</div>
+		<script src="/VirtualSky/stuquery.min.js"></script>
+		<script src="/VirtualSky/virtualsky.min.js"></script>
+		<script src="/page-script.js"></script> 
 	</body>
-	<script src="/VirtualSky/stuquery.min.js"></script>
-	<script src="/VirtualSky/virtualsky.min.js"></script>
-	<script src="/page-script.js"></script> 
 </html>
