src cannot be blank

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						<div id="extrasContent">
 							<p class="bold">✦ Extras</p>
 							<div class="extraBox">
-								<img src="" class="extraImage" id="latestSongCover" alt="❔">
+								<img src="./assets/site-icons/sparkle-site-icon-static.png" class="extraImage" id="latestSongCover" alt="❔">
 								<div class="extraInfo">
 									<p id="latestSongTitle">Loading...</p>
 									<p id="latestSongArtist">Loading...</p>
@@ -161,7 +161,7 @@
 								</div>
 							</div>
 							<div class="extraBox">
-								<img src="" class="extraImage" id="latestGameCover" alt="❔">
+								<img src="./assets/site-icons/sparkle-site-icon-static.png" class="extraImage" id="latestGameCover" alt="❔">
 								<div class="extraInfo">
 									<p id="latestGameTitle">Loading...</p>
 									<p id="latestGameWeeks">Loading...</p>
