--- a/404.html
+++ b/404.html
@@ -3,20 +3,17 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="author" content="Simran Thind" />
-		<meta
-			name="description"
-			content="Simran's personal website!"
-		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="author" content="Simran Thind">
+		<meta name="description" content="Simran's personal website!">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>404 - Simran Thind</title>
-		<link rel="icon" type="image/png" href="./assets/site-icons/sparkle-site-icon-static.png" >
+		<link rel="icon" type="image/png" href="./assets/site-icons/sparkle-site-icon-static.png">
 		<link rel="apple-touch-icon" type="image/png" href="./assets/site-icons/sparkle-site-icon-static.png">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="page-styles.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="page-styles.css">
     </head>
     <body>
 		<div id="mainBox">
@@ -24,7 +21,7 @@
 				<div id="textHalf">
 					<div id="scrollPad">
 						<h1>Simran Thind</h1>
-							<p>404 - page not found.<a href="simranthind.me">Go back?</a></p>
+							<p>404 - page not found. <a href="simranthind.me">Go back?</a></p>
 					</div>
 				</div>
 			</div>
