fix 404 link back

--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 				<div id="textHalf">
 					<div id="scrollPad">
 						<h1>Simran Thind</h1>
-							<p>404 - page not found. <a href="simranthind.me">Go back?</a></p>
+							<p>404 - page not found. <a href="https://simranthind.me/">Go back?</a></p>
 					</div>
 				</div>
 			</div>
