--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<div id="scrollPad">
 						<h1>Simran Thind</h1>
 						<div id="aboutContent">
-							<p>Software Engineering student specializing in Human-Computer Interaction at the <a href="https://uwaterloo.ca/future-students/programs/software-engineering" target="_blank">University of Waterloo</a>. Looking for new grad 2025 roles.
+							<p>Software Engineering student specializing in Human-Computer Interaction at the <a href="https://uwaterloo.ca/future-students/programs/software-engineering" target="_blank">University of Waterloo</a>. Currently interning at <a href="https://www.replicant.com/" target="_blank">Replicant</a>. Looking for new grad 2025 roles.
 								View my resume <a href="https://drive.google.com/file/d/1agbOpH9veKtwaxW2eltL4BJ4ghqRFwsd/preview" target="_blank">here</a>.
 							</p>
 							<p>The starchart (<a href="https://slowe.github.io/VirtualSky/" target="_blank">VirtualSky</a>: 0.7.7 - powered by <a href="https://lco.global/" target="_blank">Las Cumbres Observatory</a>) on this site may look busy depending on the time of day and the screen size.</p>
