add link to music log

--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
 										<p>Special Fish</p>
 									</div>
 								</a>
+								<!--Music 275 Log-->
+								<a href="https://music275-log.simranthind.me" target="_blank" class="small-link">
+									<div class="media">
+										<img width="20" height="20" src="./assets/media-icons/animationbutterfly2.gif" alt="Simran's Music 275 Log">
+										<p>Music 275 Log</p>
+									</div>
+								</a>
 							</div>
 						</div>
 						<div id="projectsContent">
