add carbon badge and add back resume link

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 						<h1>Simran Thind</h1>
 						<div id="aboutContent">
 							<p>Software Engineering student specializing in Human-Computer Interaction at the <a href="https://uwaterloo.ca/future-students/programs/software-engineering" target="_blank">University of Waterloo</a>. Most recently at <a href="https://www.replicant.com/" target="_blank">Replicant</a>. Looking for new grad 2025 roles.
-								<!-- View my resume <a href="https://drive.google.com/file/d/1agbOpH9veKtwaxW2eltL4BJ4ghqRFwsd/preview" target="_blank">here</a>. -->
-								Resume link will be back up soon!
+							View my resume <a href="https://drive.google.com/file/d/1myAa1KP07MzRh3if4cd7bLi7D2UO_oPn/preview" target="_blank">here</a>.
 							</p>
 							<p>The starchart (<a href="https://slowe.github.io/VirtualSky/" target="_blank">VirtualSky</a>: 0.7.7 - powered by <a href="https://lco.global/" target="_blank">Las Cumbres Observatory</a>) on this site may look busy depending on the time of day and the screen size.</p>
 						</div>
@@ -170,6 +169,7 @@
 								</div>
 							</div>
 							<a href="https://gossipsweb.net"><img class="extraImage" src="https://gossipsweb.net/images/twwmwh-gray.jpg" alt="This website was made with hands." style="height: 43px; border: 1px solid #000;"></a>
+							<div id="myCarbonBadge"><div id="wcb" class="carbonbadge"></div></div>
 						</div>
 						<noscript>
 							<div id="noscriptContent">
@@ -185,6 +185,7 @@
 		</div>
 		<script src="/VirtualSky/stuquery.min.js"></script>
 		<script src="/VirtualSky/virtualsky.min.js"></script>
+		<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
 		<script src="/page-script.js"></script> 
 	</body>
 </html>
