--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
 										<p>Special Fish</p>
 									</div>
 								</a>
+								<!--Music 275 Log-->
+								<a href="https://music275-log.simranthind.me" target="_blank" class="small-link">
+									<div class="media">
+										<img width="20" height="20" src="./assets/media-icons/animationbutterfly2.gif" alt="Simran's Music 275 Log">
+										<p>Music 275 Log</p>
+									</div>
+								</a>
 							</div>
 						</div>
 						<div id="projectsContent">
@@ -162,9 +169,7 @@
 								</div>
 							</div>
 							<a href="https://gossipsweb.net"><img class="extraImage" src="https://gossipsweb.net/images/twwmwh-gray.jpg" alt="This website was made with hands." style="height: 43px; border: 1px solid #000;"></a>
-							<div id="myCarbonBadge"><div id="wcb" class="carbonbadge"></div>
-								<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
-							</div>
+							<div id="myCarbonBadge"><div id="wcb" class="carbonbadge"></div></div>
 						</div>
 						<noscript>
 							<div id="noscriptContent">
@@ -180,6 +185,7 @@
 		</div>
 		<script src="/VirtualSky/stuquery.min.js"></script>
 		<script src="/VirtualSky/virtualsky.min.js"></script>
+		<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
 		<script src="/page-script.js"></script> 
 	</body>
 </html>
