add internet phone book tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<div id="scrollPad">
 						<h1>Simran Thind</h1>
 						<div id="aboutContent">
-							<p>Software Engineering student specializing in Human-Computer Interaction at the <a href="https://uwaterloo.ca/future-students/programs/software-engineering" target="_blank">University of Waterloo</a>. Most recently at <a href="https://www.replicant.com/" target="_blank">Replicant</a>. Looking for new grad 2025 roles.
+							<p>Technical Product Manager at <a href="https://www.binsentry.com/" target="_blank">BinSentry</a>. Recent graduate of the Software Engineering program (specializing in Human-Computer Interaction) from the <a href="https://uwaterloo.ca/future-students/programs/software-engineering" target="_blank">University of Waterloo</a>.
 							View my resume <a href="https://drive.google.com/file/d/1myAa1KP07MzRh3if4cd7bLi7D2UO_oPn/preview" target="_blank">here</a>.
 							</p>
 							<p>The starchart (<a href="https://slowe.github.io/VirtualSky/" target="_blank">VirtualSky</a>: 0.7.7 - powered by <a href="https://lco.global/" target="_blank">Las Cumbres Observatory</a>) on this site may look busy depending on the time of day and the screen size.</p>
@@ -154,6 +154,8 @@
 									<p id="latestGameAll">Loading...</p>
 								</div>
 							</div>
+							<a href="https://theinternetphonebook.net"><img class="extraImage" src="https://internetphonebook.net/images/badges/this-website-is-in-the-internet-phone-book-paper.png" style="width: 380px; height:54px;"></a>
+							<iframe src="https://internetphonebook.net/badges/dial-a-site-badge.html?number=280&size=small" width="228" height="52" frameborder="0" style="border: 1px solid #000;"></iframe>
 							<a href="https://gossipsweb.net"><img class="extraImage" src="https://gossipsweb.net/images/twwmwh-gray.jpg" alt="This website was made with hands." style="height: 43px; border: 1px solid #000;"></a>
 							<div id="myCarbonBadge">
 								<div id="wcb" class="carbonbadge"></div>
